--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Cardo:400i|Open+Sans:700|Raleway:300,400,600,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="img/favicons/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
+
+    <meta name="description" content="Описание страницы" />
+    <meta name="keywords" content="создание сайтов, верстка сайтов" />
+    <meta name="google" content="notranslate" />
     <title>ActiveBox</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 </head>
 <body>
 
@@ -48,22 +63,22 @@
 </svg>
 
 <!-- Header -->
-<header class="header">
+<header class="header" id="header">
     <div class="container">
         <div class="header__inner">
             <div class="header__logo">
                 <img src="img/activebox-logo.png" alt="">
             </div>
 
-            <nav class="nav">
-                <a class="nav__link" href="#">Features</a>
-                <a class="nav__link" href="#">Works</a>
-                <a class="nav__link" href="#">Our Team</a>
-                <a class="nav__link" href="#">Testimonials</a>
-                <a class="nav__link" href="#">Download</a>
+            <nav class="nav" id="nav">
+                <a class="nav__link" href="#" data-scroll="#features">Features</a>
+                <a class="nav__link" href="#" data-scroll="#works">Works</a>
+                <a class="nav__link" href="#" data-scroll="#team">Our Team</a>
+                <a class="nav__link" href="#" data-scroll="#reviews">Testimonials</a>
+                <a class="nav__link" href="#" data-scroll="#download">Download</a>
             </nav>
 
-            <button class="burger" type="button">
+            <button class="burger" type="button" id="navToggle">
                 <span class="burger__item">Menu</span>
             </button>
 
@@ -73,7 +88,7 @@
 
 
 <!-- Intro -->
-<div class="intro">
+<div class="intro" id="intro">
     <div class="container">
         <div class="intro__inner">
             <h1 class="intro__title">Your Favorite One Page Multi Purpose Template</h1>
@@ -85,7 +100,7 @@
 
 
 <!-- Features -->
-<div class="container">
+<div class="container" id="features">
     <div class="features">
         <div class="features__item">
             <img class="features__icon" src="img/features/feature-1.png" alt="">
@@ -128,7 +143,7 @@
 
 
 <!-- Works -->
-<div class="works">
+<div class="works" id="works">
     <div class="works__item">
         <img class="works__photo" src="img/works/work-1.jpg" alt="">
         <div class="works__content">
@@ -197,7 +212,7 @@
 
 
 <!-- Team -->
-<div class="team">
+<div class="team" id="team">
     <div class="container">
         <div class="team__inner">
 
@@ -317,16 +332,32 @@
 
 
 <!-- Testimonials -->
-<div class="reviews">
+<div class="reviews" id="reviews">
     <div class="container">
 
-        <div class="reviews__item">
-            <div class="reviews__photo">
-                <img class="reviews__img" src="img/reviews/review-1.jpg" alt="">
+        <div class="reviews__slider" id="reviewsSlider">
+            <div class="slick-item">
+                <div class="reviews__item">
+                    <div class="reviews__photo">
+                        <img class="reviews__img" src="img/reviews/review-1.jpg" alt="">
+                    </div>
+                    <div class="reviews__content">
+                        <div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</div>
+                        <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
+                    </div>
+                </div>
             </div>
-            <div class="reviews__content">
-                <div class="reviews__text">“Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam...”</div>
-                <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
+
+            <div class="slick-item">
+                <div class="reviews__item">
+                    <div class="reviews__photo">
+                        <img class="reviews__img" src="img/reviews/review-1.jpg" alt="">
+                    </div>
+                    <div class="reviews__content">
+                        <div class="reviews__text">“Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat iure sed placeat laborum, labore explicabo impedit qui! Laudantium, unde voluptates sit animi tenetur veniam dolorem corrupti magnam, ipsum ab, recusandae!”</div>
+                        <div class="reviews__author">Susan Sims, Interaction Designer at XYZ</div>
+                    </div>
+                </div>
             </div>
         </div>
 
@@ -336,7 +367,7 @@
 
 
 <!-- Download -->
-<div class="download">
+<div class="download" id="download">
     <div class="container">
         <h3 class="download__title">Are You Ready to Start? Download Now For Free!</h3>
         <div class="download__text">
@@ -395,12 +426,18 @@
     <div class="copyright">
         <div class="container">
             <div class="copyright__text">
-                <div>Copyright © 2019 ActiveBox. All Rights Reserved</div>                
+                <div>Copyright © 2019 ActiveBox. All Rights Reserved</div>
             </div>
         </div>
     </div>
 </footer>
 
+
+
+
+<!-- Javascript -->
+<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+<script src="app.js"></script>
 
 
 </body>
